[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/GameSelection.gd" type="Script" id=1]
[ext_resource path="res://screens/img/Titlescreen_4k.png" type="Texture" id=2]
[ext_resource path="res://menus/MenuButton.tscn" type="PackedScene" id=3]

[node name="gameSelection" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 980.0, 1170.81, 790.11 ]
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.317647 )
position = Vector2( 960, 540 )
scale = Vector2( 0.51, 0.51 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 790.0
margin_top = 595.0
margin_right = 1171.0
margin_bottom = 987.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameBtn" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 0.0
margin_bottom = 130.0
text = "New Game"

[node name="ContinueBtn" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 130.0
margin_bottom = 260.0
text = "Continue"

[node name="CreditsBtn" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 260.0
margin_bottom = 392.0
text = "Credits"
